--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -8,7 +8,7 @@
 /* Basic */
 
 :root {
-  --bg-color: #ce1b28;
+  --bg-color: #74ad03;
 }
 
 @-ms-viewport {
@@ -3405,7 +3405,8 @@ body.is-preload #banner:before {
   background-color: var(--bg-color);
   color: rgba(255, 255, 255, 0.75);
   background-attachment: fixed;
-  background-image: linear-gradient(rgba(206, 27, 40, 0.25), rgba(206, 27, 40, 0.25)), url(../../images/cta01.jpg);
+  background-image: linear-gradient(rgba(50, 273, 3, 0.25), rgba(116, 173, 3, 0.25)),
+    url(../../images/cta01.jpg);
   background-position: bottom;
   background-repeat: no-repeat;
   background-size: cover;
@@ -3636,7 +3637,7 @@ body.is-preload #banner:before {
 
 /* Footer */
 #footer {
-  background-color: #111111;
+  background-color: cadetblue;
   color: rgba(255, 255, 255, 0.5);
   padding: 8rem 0 6rem 0;
 }
@@ -3966,7 +3967,7 @@ body:before {
   -webkit-justify-content: space-between;
   -ms-justify-content: space-between;
   justify-content: space-between;
-  background: #111111;
+  background: cadetblue;
   color: rgba(255, 255, 255, 0.5);
   cursor: default;
   height: 3.25rem;
@@ -4350,7 +4351,7 @@ body:before {
 
 /* Menu */
 #menu {
-  background-color: #111111;
+  background-color: cadetblue;
   color: rgba(255, 255, 255, 0.5);
   -moz-transform: translateX(20rem);
   -webkit-transform: translateX(20rem);
